syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service Clock {
  rpc Now(google.protobuf.Empty) returns (google.protobuf.Timestamp);
  rpc NowString(google.protobuf.StringValue)
      returns (google.protobuf.StringValue);
  rpc NowStringStream(stream google.protobuf.StringValue)
      returns (stream google.protobuf.StringValue);
  rpc NowBool(google.protobuf.Empty) returns (google.protobuf.BoolValue);
}